@@ -1,5 +1,9 @@
 package com.carrotsearch.hppc;
 
+import java.util.concurrent.Callable;
+
+import com.carrotsearch.hppc.hash.MurmurHash3;
+
 final class HashContainerUtils
 {
     /**
@@ -22,6 +26,19 @@ final class HashContainerUtils
      * Default load factor.
      */
     final static float DEFAULT_LOAD_FACTOR = 0.75f;
+
+    /**
+     * Computer static perturbations table.
+     */
+    final static int [] PERTURBATIONS = new Callable<int[]>() {
+        public int[] call() {
+            int [] result = new int [32];
+            for (int i = 0; i < result.length; i++) {
+                result[i] = MurmurHash3.hash(17 + i);
+            }
+            return result;
+        }
+    }.call();
 
     /**
      * Round the capacity to the next allowed value. 
